--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe</title>
 </head>
-<body style="background-color: darkgreen;">
-  <h1 style="color: rgb(255, 251, 0);font-size: 60px;">Recipes:</h1>
+<body style="background-color: rgb(28, 13, 80);">
+  <h1 style="color: aquamarine;font-size: 60px;">Recipes:</h1>
   <a href="recipies/banana-cake.html" target="_blank">Banana Cake Recipe</a>
 
 </body>
