changed colour of links to make it more visible with the new theme

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: rgb(28, 13, 80);">
   <h1 style="color: aquamarine;font-size: 60px;">Recipes:</h1>
-  <a href="recipies/banana-cake.html" target="_blank">Banana Cake Recipe</a>
+  <a href="recipies/banana-cake.html" target="_blank" style="color: azure;">Banana Cake Recipe</a>
 
 </body>
 </html> 
