--- a/recipies/banana-cake.html
+++ b/recipies/banana-cake.html
@@ -6,7 +6,7 @@
   <title>Banana Cake Recipe</title>
 </head>
 <body style="background-color: rgb(28, 13, 80);">
-    <a href="../index.html">Home</a>
+    <a href="../index.html" style="color: azure;">Home</a>
     <h1 style="color:aquamarine;">Banana Cake Recipe</h1>
     <img src="../imgs/banana-cakepic.jpg" height="225" width="260" alt="banana cake">
     <h3 style="color: aquamarine;">ingredients</h3>
